# LPR

./: .gitignore  1q  README.md
Comm/: CMakeLists.txt  src_20211123.tar
Comm/src/: Typedef.h  ipcs.cpp  ipcs.h  main.cpp  socket.cpp  socket.h  usage.cpp  usage.h
GigEGrab/: CameraConnect.cpp  CameraConnect.h  CameraFormat.cpp  CameraFormat.h  CameraGrab.cpp  CameraGrab.h  CameraManager.cpp  CameraManager.h  Common.cpp  Common.h  GigEGrab  GigEGrabSave  Main.cpp  Makefile  Typedef.h  ipcs.cpp  ipcs.h  src_20211123.tar
GigEGrabNew/: CameraControl.cpp  CameraControl.h  Main.cpp  Makefile  Typedef.h  ipcs.cpp  ipcs.h
Inference/: CMakeLists.txt
Inference/src/: main.cpp
Inference/src/lpr_demo/: l_detect.cpp  l_ocr.cpp  utils.cpp
InferenceNCNN/: CMakeLists.txt  src_20211123.tar
InferenceNCNN/src/: Typedef.h  ipcs.cpp  ipcs.h  main.cpp  sha256.cpp
InferenceNCNN/src/lpr_demo/: l_detect.cpp  l_detect.cpp.new  l_detect.cpp.org  l_ocr.cpp  l_ocr.cpp.new  utils.cpp  utils.cpp.new  utils.cpp.org
Preview/: .qmake.stash  Makefile  Preview  Preview.pro  Typedef.h  ipcs.cpp  ipcs.h  lprViewer  lprViewer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  moc_threadPreview.cpp  src_20211123.tar  threadPreview.cpp  threadPreview.h  ui_mainwindow.h
SQLite/: LprDB  Makefile  main.cpp  sha256.h
SysMon/: Makefile  SysMon  SysMon.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.bk  moc_mainwindow.cpp  moc_thread.cpp  moc_threaddeveth0.cpp  moc_threaddeveth1.cpp  moc_threaddevgpio.cpp  moc_threaddevusb0.cpp  moc_threaddevusb1.cpp  moc_threaddevusb2.cpp  thread.cpp  thread.h  threaddeveth0.cpp  threaddeveth0.h  threaddeveth1.cpp  threaddeveth1.h  threaddevgpio.cpp  threaddevgpio.h  threaddevusb0.cpp  threaddevusb0.h  threaddevusb1.cpp  threaddevusb1.h  threaddevusb2.cpp  threaddevusb2.h  ui_mainwindow.h
USBReset/: Makefile  USBReset
include/inference/: l_detect.h  utils.h
include/inference_ncnn/: l_detect.h  l_detect.h.new  l_detect.h.org  l_ocr.h  l_ocr.h.new  utils.h  utils.h.new
include/mindvision/: CameraGrabber.h
include/ncnn/: platform.h
include/opencv/opencv2/: cvconfig.h
lib/: libSpinUpdate.so.1  libSpinVideo.so.1  libSpinVideo.so.1.27.0.48  libSpinVideo_C.so.1  libSpinnaker_C.so.1
lib/opencv/: libopencv_core.so.3.4.12  libopencv_dnn.so.3.4.12  libopencv_features2d.so.3.4.12  libopencv_flann.so.3.4.12  libopencv_highgui.so.3.4.12  libopencv_imgcodecs.so.3.4.12  libopencv_imgproc.so.3.4.12  libopencv_ml.so.3.4.12  libopencv_videoio.so.3.4.12
lib/spinnaker/: libSpinVideo_C.so.1.27.0.48  libSpinnaker_C.so.1.27.0.48  libdl.so.2
